JumpScript/tests/baselines/reference/computedPropertyNames21_ES6.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames21_ES6.jump(5,6): error TS2465: 'this' cannot be referenced in a computed property name.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames21_ES6.jump (1 errors) ====
    class C {
        bar() {
            return 0;
        }
        [this.bar()]() { }
         ~~~~
!!! error TS2465: 'this' cannot be referenced in a computed property name.
    }